Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 %\newtheorem{claim}{Claim}[theorem]
 \newtheorem{implementation}{Implementation}[claim]
 
-
+\usepackage{comment}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Math
 \DeclareMathOperator*{\argmax}{arg\,max}
