--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -1,5 +1,5 @@
 %% intro.tex
-Deep learning systems have been employed for decades \cite{ivakhnenko_cybernetic_1965} and have a pervasive influence on our daily lives. This technology is utilized in diverse applications, such as machine translation \cite{dabre_survey_2021}, image analysis \cite{bhatt_cnn_2021}, natural language processing \cite{otter_survey_2021}, and speech synthesis \cite{ning_review_2019}, among others. Deep learning methodologies' remarkable success and widespread adoption have revolutionized various industries \cite{bertolini_machine_2021}, enabling enhanced performance and efficiency in numerous tasks and services.
+Deep learning systems have been employed for decades \cite{ivakhnenko_cybernetic_1965} and pervasive influence our daily lives. This technology is utilized in diverse applications, such as machine translation \cite{dabre_survey_2021}, image analysis \cite{bhatt_cnn_2021}, natural language processing \cite{otter_survey_2021}, and speech synthesis \cite{ning_review_2019}, among others. Deep learning methodologies' remarkable success and widespread adoption have revolutionized various industries \cite{bertolini_machine_2021}, enabling enhanced performance and efficiency in numerous tasks and services.
 However, recently ChatGPT \cite{liu_summary_2023} was introduced, marking a pivotal moment in the widespread application of AI systems.
 Since then, AI systems have transcended conventional boundaries and gained widespread applicability. The emergence of the GPT-4 model \cite{openai_gpt-4_2023} has sparked discussions regarding the potential manifestation of general intelligence \cite{bubeck_sparks_2023}. While some researchers argue in favour of this perspective, I hold a different viewpoint and argue that despite their apparent intelligent behaviour, present AI systems, including ChatGPT, lack the essential characteristics necessary to qualify as true intelligence;
 These systems are trained to optimize a specific target function, such as predicting the subsequent word token \sidecite{radford_improving_2018}. Thus, these systems rely on statistical patterns rather than genuine understanding. They still lack cognitive capabilities, reasoning ability, self-awareness, and intentionality \sidecite{rosenbloom_defining_2023, mitchell_debate_2023}. It might be that current learning frameworks cannot overcome these limitations, and alternative approaches are necessary (c.f. \secref{limitationsDL}).
@@ -22,7 +22,7 @@ This thesis makes the following contributions:
 	\item The basics of deep learning and neurocomputing are described. Together with the related work, this provides a survey of the most important research dealing with alternative learning algorithms.
 	\item The ``Theory of Natural Intelligence" proposed by \sideciteay{von_der_malsburg_theory_2022} is discussed and put into the context of the theory of self-organising projection fibres \sidecite{wiskott_face_1997, wolfrum_recurrent_2008}.
 	\item The probabilistic neuron is introduced, a neuron firing a binary spike based on a learned probability distribution.
-	\item A modernised version of the self-organising projection fibre framework is proposed, thereby focusing in particular on the emergence of sub-networks.
+	\item A modernised version of the self-organising projection fibre framework is proposed, particularly focusing on sub-networks' emergence.
     \item The feasibility of the proposed framework is demonstrated with experiments.
     \item Directions for future research are given to develop the simplified framework into a complete vision framework.
 \end{enumerate}
